# cillers-hackathon-5

./: package-lock.json  polytope.yml
code/app-api/app/: db.py  graphql.py
code/web-app/: package-lock.json  package.json
code/web-app/src/: App.tsx  types.ts
code/web-app/src/graphql/: operations.ts
code/web-app/src/pages/: Authenticated.tsx  Documents.tsx  Management.tsx  Products.tsx
code/web-app/src/templates/: DocumentRendered.tsx
code/web-app/src/utils/: oauthAgentClient.ts  staticRenderHandler.ts
code/web3/: main.py  pyproject.toml
conf/: kong-dev.yml
